--- a/Cpp/Misc/Debugger/对拍.md
+++ b/Cpp/Misc/Debugger/对拍.md
@@ -12,7 +12,7 @@ constexpr int MOD = 998244353;
 constexpr u32 umx = UINT_MAX; // random_float
 ```
 
-mt19937 —— `#include <random>`
+`mt19937` ( `#include <random>` )
 
 ```cpp
 // unsigned int, unsigned long long
@@ -52,7 +52,7 @@ void getTree(int n) { // Node 1 is the root as default
 
 ```cpp
 void getGraph(int n, int m) {
-	set<PII> S;
+    set<PII> S;
     for (int i = 2; i <= n; i++) {
         int p = random(i - 1) + 1;
         fout << p << ' ' << i << '\n'; // (p, i);
