--- a/Cpp/Misc/Debugger/对拍.md
+++ b/Cpp/Misc/Debugger/对拍.md
@@ -25,15 +25,15 @@ mt19937_64 rng_64(chrono::steady_clock::now().time_since_epoch().count());
 
 ```cpp
 i64 random(i64 n) { // [0, n - 1]
-	return ((i128)rng() * rng() % n + MOD) % n;
+    return ((i128)rng() * rng() % n + MOD) % n;
 }
 
 i64 random_negative(i64 n) { // [-n, n]
-	return random(2 * n + 1) - n;
+    return random(2 * n + 1) - n;
 }
 
 double random_float(i64 n) { // [0, 1) * (n - 1) => [0, n - 1)
-	return rng() / (double)(umx) * random(n);
+    return rng() / (double)(umx) * random(n);
 }
 ```
 
@@ -66,5 +66,54 @@ void getGraph(int n, int m) {
         S.insert({u, v});
         fout << u << ' ' << v << '\n'; // (u, v)
     }
+}
+```
+
+## 对拍程序
+
+```cpp
+#include <iostream>
+#include <algorithm>
+#include <random>
+#include <chrono>
+#include <fstream>
+#include <iomanip>
+#include <cstring>
+#include <set>
+
+using namespace std;
+using u32 = unsigned int;
+using i64 = long long;
+using i128 = __int128;
+using PII = pair<int, int>;
+
+constexpr int MOD = 998244353;
+constexpr u32 umx = UINT_MAX;
+
+mt19937 rng(chrono::steady_clock::now().time_since_epoch().count());
+
+i64 random(i64 n) { // [0, n - 1]
+    return ((i128)rng() * rng() % n + MOD) % n;
+}
+
+void generate_data() {
+    ofstream fout("input.txt");
+
+    fout.close();
+}
+
+int main() {
+    for (int i = 1; i <= 1000; i ++ ) {
+        printf("interation : %d\n", i);
+        generate_data(); 
+        // getchar();
+        system("sol.exe < input.txt > sol_output.txt");
+        system("std.exe < input.txt > std_output.txt");
+        if (system("fc sol_output.txt std_output.txt")) {
+            puts("Wrong Answer!");
+            break;
+        }
+    }
+    return 0;
 }
 ```
