--- a/Cpp/Misc/Debugger/对拍.md
+++ b/Cpp/Misc/Debugger/对拍.md
@@ -20,8 +20,9 @@ mt19937 rng(chrono::steady_clock::now().time_since_epoch().count());
 mt19937_64 rng_64(chrono::steady_clock::now().time_since_epoch().count());
 ```
 
+## 生成随机数据 (gen)
 
-## 生成随机数
+- 生成随机数——
 
 ```cpp
 i64 random(i64 n) { // [0, n - 1]
@@ -37,7 +38,7 @@ double random_float(i64 n) { // [0, 1) * (n - 1) => [0, n - 1)
 }
 ```
 
-## 生成随机树
+- 生成随机树——
 
 ```cpp
 void getTree(int n) { // Node 1 is the root as default
@@ -48,7 +49,7 @@ void getTree(int n) { // Node 1 is the root as default
 }
 ```
 
-## 生成随机图
+- 生成随机图——
 
 ```cpp
 void getGraph(int n, int m) {
@@ -70,6 +71,8 @@ void getGraph(int n, int m) {
 ```
 
 ## 对拍程序
+
+### Windows
 
 ```cpp
 #include <iostream>
@@ -116,4 +119,20 @@ int main() {
     }
     return 0;
 }
+```
+
+### Linux
+
+```sh
+while true; do
+    ./gen > data.in
+    ./bf < data.in > std.out
+    ./sol < data.in > sol.out
+    if diff std.out sol.out; then
+        echo ac
+    else
+        echo wa
+        break
+    fi
+done
 ```
